--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -38,7 +38,7 @@ en:
       updated_not_active: "Your password has been changed successfully."
     registrations:
       user:
-        signed_up_but_not_approved: 'You have signed up successfully, please wait for an admin to approve your account.'
+        #signed_up_but_not_approved: 'You have signed up successfully, please wait for an admin to approve your account.'
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
